--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         <div class="w-12 h-12 bg-blue-100 rounded-full flex items-center justify-center mr-4">
                             <ion-icon name="download-outline" class="text-blue-600 text-xl"></ion-icon>
                         </div>
-                        <h3 class="text-2xl font-bold text-gray-900">1. Data Acquisition</h3>
+                        <h3 class="text-2xl font-bold text-gray-900" href="data_preprocessing.html" >1. Data Acquisition</h3>
                     </div>
                     <p class="text-gray-600 mb-6">The foundation of any NLP system starts with obtaining quality text data:</p>
                     
